/*
 *  UCF COP3330 Summer 2021 Assignment 3 Solution
 *  Copyright 2021 Matthew McKee
 */

@startuml
'https://plantuml.com/sequence-diagram

class nameSort {
    String[][] person;
    getLength();
    output();
}
class fileReader {
    getPeople();
}
class sorter {
    sort();
}
nameSort <|-- fileReader
nameSort <|-- sorter

@enduml